# zenith-contracts

./: .gitignore  CMakeLists.txt  LICENSE-APACHE.txt  LICENSE-BSL.txt  README.md  zenith_contracts_2026-02-02.tar.gz.ots
src/: codegen.hpp  contract.hpp  lc_contract.hpp  main.cpp  reflection.hpp  reflection_lc.hpp  string_literal.hpp
src/lexer/: constexpr_lexer.hpp  source_location.hpp  token.hpp  token_kind.hpp
